--- a/webpage/buyagrade.html
+++ b/webpage/buyagrade.html
@@ -16,24 +16,33 @@
 		
 		<h2>Give Us Your Money</h2>
 		<dl>
+			<form action="succer.php" method="POST">
 			<dt>Name</dt>
 			<dd>
-				???
+				<input type="text" name="name">
 			</dd>
 			
 			<dt>Section</dt>
 			<dd>
-				???
+				<select name="section">
+					<option value="MA">MA</option>
+					<option value="MH">MH</option>
+				</select>
 			</dd>
 			
 			<dt>Credit Card</dt>
 			<dd>
-				???
+				<input type="text" name="credit_card">
 			</dd>
+			<dd>
+				<input type="radio" name="type_credit" value="visa">Visa
+				<input type="radio" name="type_credit" value="master">Mastercard
+			</dd>
+			<dd>
+				<input type="submit" value="I am a giant sucker.">
+			</dd>
+		</form>
 		</dl>
 		
-		<div>
-			I am a giant sucker.
-		</div>
 	</body>
 </html>
